syntax = "proto3";

package varlog.errpb;

option go_package = "github.daumkakao.com/varlog/varlog/proto/errpb";

message ErrorDetail {
    string error_string = 1;
}

